tests/valid/boolean_operators/precedence.rs
/*
executionExitCode: 1
*/

main(): i32 {
    return 1 || 0 && 2;
}