tests/invalid/boolean_operators/missing_second_op.rs
/*
fail: 1
*/

main(): i32 {
    return 2 &&
}